udpates and bug fixes on notebooks datasets

--- a/data/generation/cnn_dailymail.ipynb
+++ b/data/generation/cnn_dailymail.ipynb
@@ -2,22 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "475c030c",
    "metadata": {},
    "source": [
-    "# Token Level Classification : CoNLL-2003\n",
+    "# Generation: CNN Dailymail\n",
     "\n",
-    "This is a simple notebook to download and store the [CoNLL-2003 Named Entity Recognition dataset](https://aclanthology.org/W03-0419). We will take it from Huggingface datasets libray (<3) and turn it into one of the two formats that classy is able to parse (i.e. jsonl or tsv).\n",
+    "This is a simple notebook to download and store the [CNN Dailymail dataset](https://aclanthology.org/K16-1028.pdf). We will take it from Huggingface datasets libray (<3) and turn it into one of the two formats that classy is able to parse (i.e. jsonl or tsv).\n",
     "\n",
     "After creating this dataset you can train the model by exectuing the following bash command:\n",
     "\n",
     "```bash\n",
-    "classy train token data/token/conll2003 -n my_firt_conll2003_run\n",
+    "classy train generation data/generation/cnn_dm -n my_firt_cnn_dm_run\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "788928fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d249c256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,56 +40,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eee3f8cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# here we load the dataset dataset from \"datasets\"\n",
-    "dataset = load_dataset('conll2003')"
+    "dataset = load_dataset(\"cnn_dailymail\", \"3.0.0\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d621611",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# here we build a simple mapping from the labels in the int format stored in the hf-datasets' version of conll2003\n",
-    "# to a more readable string format.\n",
-    "mapping = {\n",
-    "    0: \"O\",\n",
-    "    1: 'B-PER',\n",
-    "    2: 'I-PER',\n",
-    "    3: 'B-ORG',\n",
-    "    4: 'I-ORG',\n",
-    "    5: 'B-LOC',\n",
-    "    6: 'I-LOC',\n",
-    "    7: 'B-MISC',\n",
-    "    8: 'I-MISC'\n",
-    "}\n",
-    "\n",
-    "mapping"
+    "dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f4a5bc34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# let's create a repositiory that will contain the dataset splits\n",
+    "# let's create a repositiory that will contains the dataset splits\n",
     "import os\n",
-    "dir_path = \"conll2003\"\n",
+    "dir_path = \"cnn_dm\"\n",
     "os.mkdir(dir_path)\n",
+    "\n",
     "! ls"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "251b965c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if you want the output format to be tab separated decomment the second line\n",
+    "# if you want the output format to be tab separated comment decomment the second line\n",
     "output_format = \"jsonl\"\n",
     "# output_format = \"tsv\"\n",
     "\n",
@@ -97,23 +91,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9aea0acf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in ['train', 'validation', 'test']:\n",
-    "    \n",
-    "    with open(f'{dir_path}/{k}.{output_format}', 'w') as f:\n",
-    "    \n",
-    "        for instance in tqdm(dataset[k]):\n",
-    "            tokens = instance['tokens']\n",
-    "            ner_tags = [mapping[j] for j in instance['ner_tags']]\n",
+    "for split in [\"train\", \"validation\", \"test\"]:\n",
+    "\n",
+    "    with open(f\"{dir_path}/{split}.{output_format}\", \"w\") as f:\n",
+    "\n",
+    "        for instance in tqdm(dataset[split], desc=split):\n",
     "            \n",
+    "            source = instance[\"article\"].replace(\"\\t\", \"    \")\n",
+    "            target = instance[\"highlights\"]\n",
+    "\n",
     "            if output_format == \"jsonl\":\n",
-    "                json_dict = dict(tokens=tokens, labels=ner_tags)\n",
+    "                json_dict = dict(source=source, target=target)\n",
     "                dump_line = json.dumps(json_dict)\n",
     "            else:\n",
-    "                dump_line = f'{\" \".join(tokens)}\\t{\" \".join(ner_tags)}'\n",
-    "            \n",
+    "                dump_line = f\"{source}\\t{target}\"\n",
+    "\n",
     "            f.write(dump_line)\n",
     "            f.write(\"\\n\")"
    ]
@@ -121,33 +117,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "188505a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "! head -5 conll2003/train.$output_format"
+    "! head -5 $dir_path/train.$output_format"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e9d3b96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "! head -5 conll2003/validation.$output_format"
+    "! head -5 $dir_path/validation.$output_format"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "198e3540",
    "metadata": {},
    "outputs": [],
    "source": [
-    "! head -5 conll2003/test.$output_format"
+    "! head -5 $dir_path/test.$output_format"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "467ecd6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -173,5 +173,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
